src/parser/test/esprima/invalid-syntax/strict_assignment_public.js
function hello() { "use strict"; public = 1; }
